Предварительно выполнил второе задание

--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-Репозиторий для Школы разработчиков Java
+# Репозиторий для Школы разработчиков Java
+**Задание:**
+Сейчас в работе есть три конкретных класса, осуществляющие группировку данных по критерию и простой вывод
+результата работы этих классов в консоль. В качестве развития, предлагаем сделать следующее:
+
+1) [x] Выделить один класс DataGroup, которые в качестве аргумента принимает лямбду, которая по конкретному объекту person определяет к какой группе он относиться. Таким образом будет реализован open-close принцип (реализации какой-либо еще группировки достаточно написать нужную лямбду, а класс DataGroup при этом никак не меняется).
+
+2) [x] Выделить Функциональный интерфейс GroupCriterion, который по person будет определять ключ группы (ну и реализовать три варианта, по возрасту, фамилии и классу).
+
+3) [x] Выделить интерфейс Command, наследники которого будет отвечать за обработку конкретных консольных команд.
+
+4) [x] Выделить интерфейс DataLoader и реализовать его конкретный вариант загрузки данных из файла.
+
+5) [x] Выделить сервис StudentService, которые в конструкторе будет получать DataLoader чтобы загрузить данные.
+
+6) [x] Напитьсать CommandBuilder, который зависит от StudentService и умеет создавать конкретные команды (классы, реализующие интерфейс Command и обрабатывающие консольные команды).
+
+7) [x] Реализовать три конкретных консольных команды, которые собирают ту же статистику, что и классы группировки из первого задания.
